[package]
name = "jabroni-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[[bin]]
name = "jabroni"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3.26"
anyhow = "1.0.56"
rustyline = "9.1.2"

[dependencies.jabroni]
path = "../jabroni"
